@@ -40,14 +40,32 @@ public class InsiderTracker {
             InsiderTransactionResponse response = finnhubClient.getInsiderTransactions(stockSymbol);
 
             Map<String, Integer> sells = new HashMap<>();
+            Map<String, Integer> buys = new HashMap<>();
             sells.put(InsiderTransactionCodes.SELL.getCode(), 0);
-            insiderTransactions.put(stockSymbol, sells);
+            sells.put(InsiderTransactionCodes.SELL_VOLUNTARY_REPORT.getCode(), 0);
+            buys.put(InsiderTransactionCodes.BUY.getCode(), 0);
+            buys.put(InsiderTransactionCodes.BUY_VOLUNTARY_REPORT.getCode(), 0);
+            Map<String, Integer> transactions = new HashMap<>();
+            transactions.putAll(sells);
+            transactions.putAll(buys);
+            insiderTransactions.put(stockSymbol, transactions);
 
             for (InsiderTransactionResponse.Transaction insiderTransaction : response.data()) {
                 if (Objects.equals(insiderTransaction.transactionCode(), InsiderTransactionCodes.SELL.getCode())) {
                     insiderTransactions.computeIfAbsent(stockSymbol, _ -> new HashMap<>())
                             .merge(InsiderTransactionCodes.SELL.getCode(), 1, Integer::sum);
-
+                }
+                if (Objects.equals(insiderTransaction.transactionCode(), InsiderTransactionCodes.SELL_VOLUNTARY_REPORT.getCode())) {
+                    insiderTransactions.computeIfAbsent(stockSymbol, _ -> new HashMap<>())
+                            .merge(InsiderTransactionCodes.SELL.getCode(), 1, Integer::sum);
+                }
+                if (Objects.equals(insiderTransaction.transactionCode(), InsiderTransactionCodes.BUY.getCode())) {
+                    insiderTransactions.computeIfAbsent(stockSymbol, _ -> new HashMap<>())
+                            .merge(InsiderTransactionCodes.BUY.getCode(), 1, Integer::sum);
+                }
+                if (Objects.equals(insiderTransaction.transactionCode(), InsiderTransactionCodes.BUY_VOLUNTARY_REPORT.getCode())) {
+                    insiderTransactions.computeIfAbsent(stockSymbol, _ -> new HashMap<>())
+                            .merge(InsiderTransactionCodes.BUY.getCode(), 1, Integer::sum);
                 }
             }
         }
@@ -60,31 +78,32 @@ public class InsiderTracker {
     protected void sendInsiderTransactionReport(Map<StockSymbol, Map<String, Integer>> insiderTransactions) {
 
         Map<StockSymbol, Map<String, Integer>> insiderTransactionsWithHistoricData = enrichWithHistoricData(insiderTransactions);
-        Map<StockSymbol, Map<String, Integer>> sortedInsiderTransactionsWithHistoricData = orderMapBySellCount(insiderTransactionsWithHistoricData);
+        Map<StockSymbol, Map<String, Integer>> sortedInsiderSells = orderMapByCodeCount(insiderTransactionsWithHistoricData, InsiderTransactionCodes.SELL);
+        Map<StockSymbol, Map<String, Integer>> sortedInsiderBuys = orderMapByCodeCount(insiderTransactionsWithHistoricData, InsiderTransactionCodes.BUY);
 
         StringBuilder report = new StringBuilder("*Weekly Insider Transactions Report:*\n\n");
 
         report.append("```").append("%n".formatted());
         report.append(String.format("%-12s %-12s %-12s%n", "Symbol", "Sells", "Diff"));
-
-
-        for (Map.Entry<StockSymbol, Map<String, Integer>> entry : sortedInsiderTransactionsWithHistoricData.entrySet()) {
+        for (Map.Entry<StockSymbol, Map<String, Integer>> entry : sortedInsiderSells.entrySet()) {
             StockSymbol symbol = entry.getKey();
             Map<String, Integer> transactionTypes = entry.getValue();
-            int sellCount = transactionTypes.get(InsiderTransactionCodes.SELL.getCode());
+            int sellCount = transactionTypes.get(InsiderTransactionCodes.SELL.getCode()) + transactionTypes.getOrDefault(InsiderTransactionCodes.SELL_VOLUNTARY_REPORT.getCode(), 0);
             int historicSellCount = transactionTypes.getOrDefault(InsiderTransactionCodes.SELL_HISTORIC.getCode(), 0);
 
-            if (sellCount > 0 || historicSellCount > 0) {
+            addHistoryTransactionCountDiff(sellCount, historicSellCount, symbol, report);
+        }
+        report.append("```");
 
-                String sign = "";
-                int sellDifference = sellCount - historicSellCount;
-                if (sellDifference > 0) {
-                    sign = "+";
-                }
-                String diff = sign + sellDifference;
-                report.append(String.format("%-12s %-12d %-12s%n",
-                        symbol.getTicker(), sellCount, diff));
-            }
+        report.append("%n".formatted()).append("%n".formatted()).append(("```")).append("%n".formatted());
+        report.append(String.format("%-12s %-12s %-12s%n", "Symbol", "Buys", "Diff"));
+        for (Map.Entry<StockSymbol, Map<String, Integer>> entry : sortedInsiderBuys.entrySet()) {
+            StockSymbol symbol = entry.getKey();
+            Map<String, Integer> transactionTypes = entry.getValue();
+            int buyCount = transactionTypes.get(InsiderTransactionCodes.BUY.getCode()) + transactionTypes.getOrDefault(InsiderTransactionCodes.BUY_VOLUNTARY_REPORT.getCode(), 0);
+            int historicBuyCount = transactionTypes.getOrDefault(InsiderTransactionCodes.BUY_HISTORIC.getCode(), 0);
+
+            addHistoryTransactionCountDiff(buyCount, historicBuyCount, symbol, report);
         }
         report.append("```");
 
@@ -98,21 +117,33 @@ public class InsiderTracker {
             StockSymbol symbol = historic.getSymbol();
 
             insiderTransactions.get(symbol).put(InsiderTransactionCodes.SELL_HISTORIC.getCode(), historic.getTransactions().get(InsiderTransactionCodes.SELL.getCode()));
+            insiderTransactions.get(symbol).put(InsiderTransactionCodes.BUY_HISTORIC.getCode(), historic.getTransactions().get(InsiderTransactionCodes.BUY.getCode()));
         }
 
         return insiderTransactions;
     }
 
-    private Map<StockSymbol, Map<String, Integer>> orderMapBySellCount(Map<StockSymbol, Map<String, Integer>> insiderTransactions) {
+    private Map<StockSymbol, Map<String, Integer>> orderMapByCodeCount(Map<StockSymbol, Map<String, Integer>> insiderTransactions, InsiderTransactionCodes code) {
         return insiderTransactions.entrySet().stream()
                 .sorted((e1, e2) -> Integer.compare(
-                        e2.getValue().getOrDefault(InsiderTransactionCodes.SELL.getCode(), 0),
-                        e1.getValue().getOrDefault(InsiderTransactionCodes.SELL.getCode(), 0)))
+                        e2.getValue().getOrDefault(code.getCode(), 0),
+                        e1.getValue().getOrDefault(code.getCode(), 0)))
                 .collect(Collectors.toMap(
                         Map.Entry::getKey,
                         Map.Entry::getValue,
                         (a, _) -> a,
                         LinkedHashMap::new
                 ));
+    }
+
+    private void addHistoryTransactionCountDiff(int currentCount, int historicCount, StockSymbol symbol, StringBuilder report) {
+        String sign = "";
+        int difference = currentCount - historicCount;
+        if (difference > 0) {
+            sign = "+";
+        }
+        String diff = sign + difference;
+        report.append(String.format("%-12s %-12d %-12s%n",
+                symbol.getTicker(), currentCount, diff));
     }
 }
